--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<div>
+<div style='width:30%; height:100%'>
+  
+</div>
+<div style='width:30%; height:100%'>
+  
+</div>
+<div style='width:30%; height:100%'>
   
 </div>
