--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style='width:30%; height:100%'>
+<div style='width:30%; height:100%; background:#2d2d2d;'>
   
 </div>
 <div style='width:30%; height:100%'>
