--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <div style='display:flex;'>
-  <div style='width:30%; height:100%; background:#2d2d2d;'>
+  <div style='width:360px; height:100%; background:#2d2d2d;'>
 
   </div>
-  <div style='width:40%; height:100%'>
-
-  </div>
-  <div style='width:30%; height:100%'>
+  <div style='width:calc(100% - 360px); height:100%'>
 
   </div>
 </div>
