--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style='display:flex;'>
+<div style='display:flex; width:100%; height:100%;'>
   <div style='width:360px; height:100%; background:#2d2d2d;'>
 
   </div>
@@ -6,3 +6,9 @@
 
   </div>
 </div>
+<style>
+  html, body{
+    width:100%;
+    height:100%;
+  }
+</style>
