--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   })
   function resizeSidebar(){
     if(document.body.offsetwidth > 925){
-      id('sidbar').style.width = '360px'
+      id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
     }else if(document.body.offsetwidth > 775){
-      id('sidbar').style.width = '280px'
+      id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
     }else{
-      id('sidbar').style.width = '0px'
+      id('sidebar').style.width = '0px'
       id('mainFrame').style.width = 'calc(100%)'
     }
   }
