--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
 
 <style>
   html, body, div{
-    display:flex;
-    width:100%;
-    height:100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
   }
 </style>
