--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     resizeSidebar()
   })
   function resizeSidebar(){
-    if(document.body.offsetwidth > 925){
+    if(document.body.offsetWidth > 925){
       id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
-    }else if(document.body.offsetwidth > 775){
+    }else if(document.body.offsetWidth > 775){
       id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
     }else{
