--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   })
   function resizeSidebar(){
     if(document.body.offsetWidth > 925){
+      alert('1')
       id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
     }else if(document.body.offsetWidth > 775){
+      alert('2')
       id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
     }else{
+      alert('3')
       id('sidebar').style.width = '0px'
       id('mainFrame').style.width = 'calc(100%)'
     }
