--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  </head>
+  
   <body>
     <div id='sidebar' style='height:100%; background:#2d2d2d;'>
     </div>
