--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <body>
     <div id='sidebar' style='height:100%; background:#2d2d2d;'>
+      <p>Eedo Tools</p>
     </div>
     <div id='mainFrame' style='height:100%'>
     </div>
