--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
-        <div id='content' style='max-width:750px; background:red;'>
+        <div id='content' style='display:block; max-width:750px; background:red;'>
         </div>
       </div>
     </div>
