--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body style='max-width:1500px; max-height:850px;'>
-    <div id='sidebar' style='background:#2d2d2d;'>
+    <div id='sidebar' style='background:#2d2d2d; color:white;'>
       <b style='font-size:150%'>Eedo Tools</b>
     </div>
     <div id='mainFrame'>
