--- a/index.html
+++ b/index.html
@@ -41,4 +41,20 @@
     return document.getElementById(elementId)
   }
 </script>
+  
+<style>
+  html, body, div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+</style>
 </html>
