--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html>
+<html style='background:smokewhite'>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   </head>
   
-  <body style='max-width:1500px; max-height:850px;'>
+  <body style='max-width:1500px; max-height:850px; background:white;'>
     <div id='sidebar' style='background:#2d2d2d; color:white;'>
       <b style='font-size:150%'>Eedo Tools</b>
     </div>
