--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style='background:smokewhite'>
+<html style='background:#ededed'>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -11,7 +11,7 @@
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
-        <div id='content' style='display:block; max-width:750px; background:red;'>
+        <div id='content' style='display:block; max-width:750px;'>
         </div>
       </div>
     </div>
