--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   
   <body style='max-width:1500px; max-height:850px; background:white;'>
     <div id='sidebar' style='background:#2d2d2d; color:white;'>
-      <b style='font-size:150%'>Eedo Tools</b>
+      <b style='font-size:175%' margin:1em 0;>Eedo Tools</b>
+      <span></span>
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
