--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   
   <body style='max-width:1500px; max-height:850px; background:white;'>
-    <div id='sidebar' style='background:#2d2d2d; color:white;'>
+    <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white;'>
       <b style='font-size:175%' margin:1em 0;>Eedo Tools</b>
-      <span></span>
+      <span>파란페이 ParahnPay</span>
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
