--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style='max-width:1500px; max-height:850px; background:white;'>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
-      <span>파란페이 ParahnPay</span>
+      <span>파란페이 (ParahnPay)</span>
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
