--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
       <span>파란페이 (ParahnPay)</span>
+      <span>sTiny.link</span>
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
