--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   </head>
   
-  <body style='max-width:1500px; max-height:850px; background:white;'>
+  <body style='min-height:500px; max-width:1500px; max-height:850px; background:white;'>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
       <span>파란페이 (ParahnPay)</span>
