--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <body style='min-height:500px; max-width:1500px; max-height:850px; background:white;'>
     <div id='topbar' style='height:75px; background:#2d2d2d; color:white;'>
+      <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
     </div>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
