--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     }else if(document.body.offsetWidth > 775){
       id('topbar').style.display = 'none'
       id('sidebar').style.width = '280px'
+      id('mainFrame').style.width = 'calc(100% - 280px)'
       id('mainFrame').style.height = '100%'
       id('contentFrame').style.width = '95%'
     }else{
