--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
-        <div id='content' style='display:block; max-width:750px;'>
+        <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
         </div>
       </div>
     </div>
