--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }else{
       id('topbar').style.display = 'flex'
       id('sidebar').style.width = '0px'
-      id('mainFrame').style.width = '100%'
+      id('mainFrame').style.width = 'calc(100% - 1px)'
       id('mainFrame').style.height = 'calc(100% - 75px)'
       id('contentFrame').style.width = '90%'
     }
