--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
+          the content goes here
         </div>
       </div>
     </div>
