--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <span>sTiny.link</span>
     </div>
     <div id='mainFrame'>
-      <div id='contentFrame' style='display:block;'>
+      <div id='contentFrame' style='display:block; width:90%;'>
         <div id='content' style='display:block; max-width:750px; overflow-y:auto; padding-top:20px;'>
           the content goes here
         </div>
@@ -35,21 +35,18 @@
       id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
       id('mainFrame').style.height = '100%'
-      id('contentFrame').style.width = '90%'
     }else if(document.body.offsetWidth > 775){
       id('topbar').style.display = 'none'
       id('sidebar').style.display = 'flex'
       id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
       id('mainFrame').style.height = '100%'
-      id('contentFrame').style.width = '95%'
     }else{
       id('topbar').style.display = 'flex'
       id('sidebar').style.display = 'none'
       id('sidebar').style.width = '0px'
       id('mainFrame').style.width = '100%'
       id('mainFrame').style.height = 'calc(100% - 75px)'
-      id('contentFrame').style.width = '90%'
     }
   }
   function id(elementId){
