--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block; width:90%;'>
-        <div id='content' style='display:block; max-width:750px; overflow-y:auto; padding-top:20px;'>
+        <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
+          <div style='height:20px;'></div>
           the content goes here
         </div>
       </div>
