--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
       id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
       id('mainFrame').style.height = '100%'
-      id('mainFrame').style.width = '90%'
+      id('contentFrame').style.width = '90%'
     }else if(document.body.offsetWidth > 775){
       id('topbar').style.display = 'none'
       id('sidebar').style.display = 'flex'
       id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
       id('mainFrame').style.height = '100%'
-      id('mainFrame').style.width = '85%'
+      id('contentFrame').style.width = '85%'
     }else{
       id('topbar').style.display = 'flex'
       id('sidebar').style.display = 'none'
       id('sidebar').style.width = '0px'
       id('mainFrame').style.width = '100%'
       id('mainFrame').style.height = 'calc(100% - 75px)'
-      id('mainFrame').style.width = '90%'
+      id('contentFrame').style.width = '90%'
     }
   }
   function id(elementId){
