--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
           <div style='height:10px;'></div>
-          <h1>the content goes here</h1>
+          <h1>The content goes here</h1>
         </div>
       </div>
     </div>
