--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </div>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white; overflow:hidden;'>
       <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
-      <span>파란페이 (ParahnPay)</span>
-      <span>sTiny.link</span>
+      <span style="margin:0.25em 0;">파란페이 (ParahnPay)</span>
+      <span style="margin:0.25em 0;">sTiny.link</span>
     </div>
     <div id='mainFrame'>
       <div id='contentFrame' style='display:block;'>
