--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   <body style='min-height:500px; max-width:1600px; max-height:900px; background:white; font-family:GmarketSansLight;'>
     <div id='topbar' style='height:75px; background:#2d2d2d; color:white;'>
-      <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
+      <b style='font-size:175%; margin:1em 0; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white; overflow:hidden;'>
-      <b style='font-size:175%; margin:1em 0;'>Eedo Tools</b>
+      <b style='font-size:175%; margin:1em 0; border-bottom:white solid 2px;'>Eedo Tools</b>
       <span style="margin:0.25em 0;">파란페이 (ParahnPay)</span>
       <span style="margin:0.25em 0;">sTiny.link</span>
     </div>
