--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style='background:#ededed'>
+<html style='display:block; background:#ededed'>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
