--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
   .vertical{
     flex-direction:column
   }
+  .button{
+    cursor:pointer;
+    -ms-user-select:none;
+    -moz-user-select:-moz-none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    user-select:none;
+  }
   @font-face {
     font-family: 'GmarketSansLight';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
