--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body style='min-height:500px; max-width:1600px; max-height:900px; background:white; font-family:GmarketSansLight;'>
     <div id='topbar' style='height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
-      <img id='sidebarButton' src='/list.svg' style='position:absolute; left:20px; height:35px;'>
     </div>
     <div id='sidebar' class='vertical' style='background:#2d2d2d; color:white; overflow:hidden;'>
       <b style='font-size:175%; margin:1em 0; border-bottom:white solid 2px;'>Eedo Tools</b>
@@ -23,6 +22,7 @@
         </div>
       </div>
     </div>
+    <img id='sidebarButton' src='/list.svg' class='button' style='position:absolute; top:20px; left:20px; height:35px;'>
   </body>
 
 <script>
@@ -33,6 +33,7 @@
   function resizeSidebar(){
     if(document.body.offsetWidth > 925){
       id('topbar').style.display = 'none'
+      id('sidebarButton').style.display = 'none'
       id('sidebar').style.display = 'flex'
       id('sidebar').style.width = '360px'
       id('mainFrame').style.width = 'calc(100% - 360px)'
@@ -40,6 +41,7 @@
       id('contentFrame').style.width = '90%'
     }else if(document.body.offsetWidth > 775){
       id('topbar').style.display = 'none'
+      id('sidebarButton').style.display = 'none'
       id('sidebar').style.display = 'flex'
       id('sidebar').style.width = '280px'
       id('mainFrame').style.width = 'calc(100% - 280px)'
@@ -47,6 +49,7 @@
       id('contentFrame').style.width = '87.5%'
     }else{
       id('topbar').style.display = 'flex'
+      id('sidebarButton').style.display = 'flex'
       id('sidebar').style.display = 'none'
       id('sidebar').style.width = '0px'
       id('mainFrame').style.width = '100%'
