--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       id('topbar').style.display = 'flex'
       id('sidebarButton').style.display = 'flex'
       id('sidebar').style.display = 'none'
-      id('sidebar').style.width = '0px'
+      id('sidebar').style.width = '100%'
       id('mainFrame').style.width = '100%'
       id('mainFrame').style.height = 'calc(100% - 75px)'
       id('contentFrame').style.width = '90%'
