--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div id='topbar' style='height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
-    <div id='sidebar' class='vertical' style='display:absolute; left:0; background:#2d2d2d; color:white; overflow:hidden;'>
+    <div id='sidebar' class='vertical' style='position:absolute; left:0; background:#2d2d2d; color:white; overflow:hidden;'>
       <b style='font-size:175%; margin:1em 0; border-bottom:white solid 2px;'>Eedo Tools</b>
       <span style="margin:0.25em 0;">파란페이 (ParahnPay)</span>
       <span style="margin:0.25em 0;">sTiny.link</span>
     </div>
-    <div id='mainFrame' style='display:absolute; right:0; bottom:0;'>
+    <div id='mainFrame' style='position:absolute; right:0; bottom:0;'>
       <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
           <div style='height:10px;'></div>
