--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body style='min-height:500px; max-width:1600px; max-height:900px; background:white; font-family:GmarketSansLight;'>
-    <div id='topbar' style='height:75px; background:#2d2d2d; color:white;'>
+    <div id='topbar' style='position:absolute; top:0; height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
     <div id='sidebar' class='vertical' style='position:absolute; left:0; background:#2d2d2d; color:white; overflow:hidden;'>
