--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </div>
     <div id='mainFrame' style='position:absolute; right:0; bottom:0;'>
       <div id='contentFrame' style='display:block;'>
-        <div id='content' style='display:block; max-width:750px; overflow-y:auto;'>
+        <div id='content' style='display:block; max-width:750px; overflow-y:auto; word-break: break-word;'>
           <div style='height:10px;'></div>
           <h1>The content goes here</h1>
-          <span>asdfasakkkkkkkkkkkkkkkk<br/>kkkkkkkkkkkkddddddddddddddddddddddddwllllllllllllllllllllllll<br/>llllllllwwwwwwwwwwwww<br/>wwwwwwwwwwwwwww<br/>woooooooooooooooooooooooooo<br/>ooqqqqqqqqqqqqqqqqqqqqqqqqqqqkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkvvvvvvvvvvvvvvvvvvvvvvvvvvvooooooooooooaeifjasldkfj;asdlkgaso;dghasdfkjawhilqfjdahksjdhflaksjdhfkasj<br/>dhlfkasjdlfhkasjdlkfhasjdlfasdjflahksjdflahsk</span>
+          <span>asdfasakkkkkkkkkkkkkkkk<br/>kkkkkkkkk<br/>kkkddddddddddddddddddddddddwlllllllllll<br/>lllllllllllll<br/>llllllllwwwwwwwwwwwww<br/>wwwwwwwwwwwwwww<br/>woooooooooooooooooooooooooo<br/>ooqqqqqqqqqqqqqqqqqqqqqqqqq<br/>qqkkkkkkkkkkkkkkkkkkkkkkk<br/>kkkkkkkvvvvv<br/>vvvvvvvvvvvvvvvvv<br/>vvvvvooooooo<br/>oooooaeifjasld<br/>kfj;asdlkg<br/>aso;dghasdfk<br/>jawhi<br/>lqfjdahsadfasdfasdfasdfasdfjahsld<br/>fjhalsdjfhlaskjdhflaksjdhflkasjdhflkasjdhfklasjhdflkasjdhflkasjhdflkasjdhflkasjdhflkasjdhflkas<br/>jdhflkasjdhflkasjdhflkajsdhflkasjdhflkasjdhflkasjdhflkasjdhflkasdjfhlkasdjksj<br/>dhf<br/>laks<br/>jdhfkasj<br/>dhlfkasj<br/>dlfhkasjdl<br/>kfhasjdlfasdjflahk<br/>sjdflahsk</span>
         </div>
       </div>
     </div>
