--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div id='mainFrame' style='position:absolute; right:0; bottom:0;'>
       <div id='contentFrame' style='display:block; overflow-y:auto;'>
-        <div id='content' style='display:block; max-width:750px; overflow-X:hidden; word-break: break-word;'>
+        <div id='content' style='display:block; height:auto; max-width:750px; overflow-X:hidden; word-break: break-word;'>
           <div style='height:10px;'></div>
           <h1>The content goes here</h1>
           <span>asdfasakkkkkkkkkkkkkkkk<br/>kkkkkkkkk<br/>kkkddddddddddddddddddddddddwlllllllllll<br/>lllllllllllll<br/>llllllllwwwwwwwwwwwww<br/>wwwwwwwwwwwwwww<br/>woooooooooooooooooooooooooo<br/>ooqqqqqqqqqqqqqqqqqqqqqqqqq<br/>qqkkkkkkkkkkkkkkkkkkkkkkk<br/>kkkkkkkvvvvv<br/>vvvvvvvvvvvvvvvvv<br/>vvvvvooooooo<br/>oooooaeifjasld<br/>kfj;asdlkg<br/>aso;dghasdfk<br/>jawhi<br/>lqfjdahsadfasdfasdfasdfasdfjahsld<br/>fjhalsdjfhlaskjdhflaksjdhflkasjdhflkasjdhfklasjhdflkasjdhflkasjhdflkasjdhflkasjdhflkasjdhflkas<br/>jdhflkasjdhflkasjdhflkajsdhflkasjdhflkasjdhflkasjdhflkasjdhflkasdjfhlkasdjksj<br/>dhf<br/>laks<br/>jdhfkasj<br/>dhlfkasj<br/>dlfhkasjdl<br/>kfhasjdlfasdjflahk<br/>sjdflahsk</span>
