--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <div id='topbar' style='position:absolute; top:0; height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
-    <div id='mainFrame' style='position:absolute; right:0; bottom:0;'>
-      <div id='contentFrame' style='display:block; overflow-y:auto;'>
+    <div id='mainFrame' style='position:absolute; right:0; bottom:0; overflow-y:auto;'>
+      <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; height:auto; max-width:750px; overflow-X:hidden; word-break: break-word;'>
           <div style='height:10px;'></div>
           <h1>The content goes here</h1>
           <span>asdfasakkkkkkkkkkkkkkkk<br/>kkkkkkkkk<br/>kkkddddddddddddddddddddddddwlllllllllll<br/>lllllllllllll<br/>llllllllwwwwwwwwwwwww<br/>wwwwwwwwwwwwwww<br/>woooooooooooooooooooooooooo<br/>ooqqqqqqqqqqqqqqqqqqqqqqqqq<br/>qqkkkkkkkkkkkkkkkkkkkkkkk<br/>kkkkkkkvvvvv<br/>vvvvvvvvvvvvvvvvv<br/>vvvvvooooooo<br/>oooooaeifjasld<br/>kfj;asdlkg<br/>aso;dghasdfk<br/>jawhi<br/>lqfjdahsadfasdfasdfasdfasdfjahsld<br/>fjhalsdjfhlaskjdhflaksjdhflkasjdhflkasjdhfklasjhdflkasjdhflkasjhdflkasjdhflkasjdhflkasjdhflkas<br/>jdhflkasjdhflkasjdhflkajsdhflkasjdhflkasjdhflkasjdhflkasjdhflkasdjfhlkasdjksj<br/>dhf<br/>laks<br/>jdhfkasj<br/>dhlfkasj<br/>dlfhkasjdl<br/>kfhasjdlfasdjflahk<br/>sjdflahsk</span>
           <div style='height:20px;'></div>
+        </div>
+        <div id='footer'>
         </div>
       </div>
     </div>
