--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <span>asdfasakkkkkkkkkkkkkkkk<br/>kkkkkkkkk<br/>kkkddddddddddddddddddddddddwlllllllllll<br/>lllllllllllll<br/>llllllllwwwwwwwwwwwww<br/>wwwwwwwwwwwwwww<br/>woooooooooooooooooooooooooo<br/>ooqqqqqqqqqqqqqqqqqqqqqqqqq<br/>qqkkkkkkkkkkkkkkkkkkkkkkk<br/>kkkkkkkvvvvv<br/>vvvvvvvvvvvvvvvvv<br/>vvvvvooooooo<br/>oooooaeifjasld<br/>kfj;asdlkg<br/>aso;dghasdfk<br/>jawhi<br/>lqfjdahsadfasdfasdfasdfasdfjahsld<br/>fjhalsdjfhlaskjdhflaksjdhflkasjdhflkasjdhfklasjhdflkasjdhflkasjhdflkasjdhflkasjdhflkasjdhflkas<br/>jdhflkasjdhflkasjdhflkajsdhflkasjdhflkasjdhflkasjdhflkasjdhflkasdjfhlkasdjksj<br/>dhf<br/>laks<br/>jdhfkasj<br/>dhlfkasj<br/>dlfhkasjdl<br/>kfhasjdlfasdjflahk<br/>sjdflahsk</span>
           <div style='height:20px;'></div>
         </div>
-        <div id='footer'>
-        </div>
+      </div>
+      <div id='footer' style='height:75px; background:black;'>
       </div>
     </div>
     <div id='sidebar' class='vertical' style='position:absolute; left:0; background:#2d2d2d; color:white; overflow:hidden;'>
