--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id='topbar' style='position:absolute; top:0; height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
-    <div id='mainFrame' style='position:absolute; right:0; bottom:0; overflow-y:auto;'>
+    <div id='mainFrame' style='diplay:block; position:absolute; right:0; bottom:0; overflow-y:auto;'>
       <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; height:auto; max-width:750px; overflow-X:hidden; word-break: break-word;'>
           <div style='height:10px;'></div>
@@ -43,6 +43,7 @@
       id('mainFrame').style.width = 'calc(100% - 360px)'
       id('mainFrame').style.height = '100%'
       id('contentFrame').style.width = '90%'
+      id('contentFrame').style.left = '10%'
     }else if(document.body.offsetWidth > 775){
       id('topbar').style.display = 'none'
       id('sidebarButton').style.display = 'none'
@@ -51,6 +52,7 @@
       id('mainFrame').style.width = 'calc(100% - 280px)'
       id('mainFrame').style.height = '100%'
       id('contentFrame').style.width = '87.5%'
+      id('contentFrame').style.left = '6.25%'
     }else{
       id('topbar').style.display = 'flex'
       id('sidebarButton').style.display = 'flex'
@@ -59,6 +61,7 @@
       id('mainFrame').style.width = '100%'
       id('mainFrame').style.height = 'calc(100% - 75px)'
       id('contentFrame').style.width = '90%'
+      id('contentFrame').style.left = '10%'
     }
   }
   id('sidebarButton').addEventListener('click', function(){
