--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id='topbar' style='position:absolute; top:0; height:75px; background:#2d2d2d; color:white;'>
       <b style='font-size:175%; margin-left:0.3em; border-bottom:white solid 2px;'>Eedo Tools</b>
     </div>
-    <div id='mainFrame' style='diplay:block; position:absolute; right:0; bottom:0; overflow-y:auto;'>
+    <div id='mainFrame' style='display: block; position:absolute; right:0; bottom:0; overflow-y:auto;'>
       <div id='contentFrame' style='display:block;'>
         <div id='content' style='display:block; height:auto; max-width:750px; overflow-X:hidden; word-break: break-word;'>
           <div style='height:10px;'></div>
